--- a/styles.css
+++ b/styles.css
@@ -854,7 +854,7 @@
 
 @media only screen and (max-width: 375px) {
     body {
-      font-size: 14px; /* Adatta la dimensione del testo */
+      font-size: 14px; 
       padding: 10px;
     }
   
